--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,7 +10,11 @@
       content="Web site created using create-react-app"
     />
     <meta http-equiv="Content-Security-Policy"
-      content="default-src 'self'; img-src 'self' data: https://res.cloudinary.com;">
+  content="default-src 'self';
+           img-src 'self' data: https://res.cloudinary.com;
+           media-src 'self' https://res.cloudinary.com;
+           object-src 'self' https://res.cloudinary.com;">
+
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
